--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -1,5 +1,5 @@
 <div id="header">
-  <h1><a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"/></a></h1>
+  <a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles of Dr.M." /></a>
 </div>
 <ul id="navbar">
   <a href="/en"><li>Home</li></a>
@@ -20,5 +20,3 @@
     </ul>
   </li>
 </ul>
-
-
