--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -1,23 +1,22 @@
 <div id="header">
-  <h1><a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles"/></a></h1>
+  <a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles of Dr.M." /></a>
 </div>
 <ul id="navbar">
-  <li> <a href="/fi">Etusivu</a></li>
-  <li> <a href="/fi/screenshots">Kuvat</a></li>
-  <li> <a href="/fi/news">Uutiset</a></li>
-  <li> <a href="/fi/download">Lataa</a></li>
-  <li> <a href="https://github.com/Secretchronicles/TSC">Github</a></li>
-  <li> <a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
-  <li> <a href="http://forum.secretchronicles.de/forums">Foorumi</a> </li>
-  <li> <a href="http://lists.secretchronicles.de/">Postituslista</a></li>
-  <li> <a href="http://wiki.secretchronicles.de/">Wiki</a></li>
-  <li> <a href="/fi/documentation">Dokumentaatio</a></li>
-  <li> <a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
+  <a href="/fi"><li>Etusivu</li></a>
+  <a href="/fi/screenshots"><li>Kuvat</li></a>
+  <a href="/fi/news"><li>Uutiset</li></a>
+  <a href="/fi/download"><li>Lataa</li></a>
+  <a href="https://github.com/Secretchronicles/TSC"><li>Github</li></a>
+  <a href="https://github.com/Secretchronicles/TSC/issues/"><li>Bugit</li></a>
+  <a href="http://forum.secretchronicles.de/forums"><li>Foorumi</li></a>
+  <a href="http://lists.secretchronicles.de/"><li>Postituslista</li></a>
+  <a href="http://wiki.secretchronicles.de/"><li>Wiki</li></a>
+  <a href="/fi/documentation"><li>Dokumentaatio</li></a>
+  <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logit</li></a>
   <li>Language
     <ul>
-      <li><a href="/fi"><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</a></li>
-      <li><a href="/en"><img class="language" alt="English" src="/assets/flags/en.png"/> English</a></li>
+      <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</li></a>
+      <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"/> English</li></a>
     </ul>
   </li>
 </ul>
-
