Add shadow also around the footer.

--- a/layouts/blogpost_en.erb
+++ b/layouts/blogpost_en.erb
@@ -8,7 +8,8 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>" />
   </head>
   <body>
-  <div id="page">
+  <div id="fullpage">
+   <div id="page">
 
     <%= render "_head_en" %>
 
@@ -34,9 +35,10 @@
       <%= yield %>
     </div>
 
-  </div>
+   </div>
 
     <%= render "_foot" %>
 
+  </div>
   </body>
 </html>
