--- a/layouts/default_en.erb
+++ b/layouts/default_en.erb
@@ -10,6 +10,7 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>" />
   </head>
   <body>
+  <div id="fullpage">
     <div id="page">
 
       <%= render "_head_en" %>
@@ -23,6 +24,6 @@
     </div>
 
       <%= render "_foot" %>
-
+  </div>
   </body>
 </html>
