--- a/layouts/default_fi.erb
+++ b/layouts/default_fi.erb
@@ -10,6 +10,7 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>" />
   </head>
   <body>
+  <div id="fullpage">
    <div id="page">
 
     <%= render "_head_fi" %>
@@ -24,5 +25,6 @@
    </div>
 
     <%= render "_foot" %>
+  </div>
   </body>
 </html>
