--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -4,12 +4,19 @@ body {
 	color:black;
 	height: 100%;
 }
+#fullpage {
+        max-width: 1200px;
+        min-height: 1000px;
+        margin: 0 auto;
+        text-align: left;
+        min-width: 300px;
+	box-shadow: 0 0 64px rgba(0, 0, 0, 1);
+}
 #page {
 	background-color: #C4A8A8;
 	max-width: 1200px;
 	min-height: 1000px;
 	margin: 0 auto;
-	box-shadow: 0 0 64px rgba(0, 0, 0, 1);
 	text-align: left;
 	min-width: 300px;
 }
