--- a/layouts/blogpost_fi.erb
+++ b/layouts/blogpost_fi.erb
@@ -8,7 +8,8 @@
     <meta name="generator" content="nanoc <%= Nanoc::VERSION %>" />
   </head>
   <body>
-  <div id="page">
+  <div id="fullpage">
+   <div id="page">
 
     <%= render "_head_fi" %>
 
@@ -34,8 +35,9 @@
       <%= yield %>
     </div>
 
-  </div>
+   </div>
 
     <%= render "_foot" %>
+  </div>
   </body>
 </html>
