Change navbar menu to bricks.

--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -13,7 +13,7 @@
   <a href="http://wiki.secretchronicles.de/"><li>Wiki</li></a>
   <a href="/en/documentation"><li>Docs</li></a>
   <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logs</li></a>
-  <li>Language
+  <li class="navright">Language
     <ul>
       <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</li></a>
       <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"/> English</li></a>
