--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -3,7 +3,7 @@
 </div>
 <ul id="navbar">
   <a href="/fi"><li>Etusivu</li></a>
-  <a href="/fi/screenshots"><li>Kuvat</li></a>
+  <a href="/fi/screenshots"><li >Kuvat</li></a>
   <a href="/fi/news"><li>Uutiset</li></a>
   <a href="/fi/download"><li>Lataa</li></a>
   <a href="https://github.com/Secretchronicles/TSC"><li>Github</li></a>
@@ -11,7 +11,7 @@
   <a href="http://forum.secretchronicles.de/forums"><li>Foorumi</li></a>
   <a href="http://lists.secretchronicles.de/"><li>Postituslista</li></a>
   <a href="http://wiki.secretchronicles.de/"><li>Wiki</li></a>
-  <a href="/fi/documentation"><li>Dokumentaatio</li></a>
+  <a href="/fi/documentation"><li>Dokumentaatio</li class="navmiddle"></a>
   <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logit</li></a>
   <li>Language
     <ul>
