--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -41,14 +41,35 @@ body {
 }
 #navbar li {
 	float:left;
-	background-color: black;
 	padding: 15px;
 	position: relative;
-	color:white;
+	color: white;
 	cursor: pointer;
+	background-image: url("/assets/1_black.png");
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+	/* background-color: black; */
+	text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
+        -moz-border-radius-topleft: 10px;
+        -webkit-border-top-left-radius: 10px;   
+        -moz-border-radius-topright: 10px;
+        -webkit-border-top-right-radius: 10px;  
+        -moz-border-radius-bottomleft: 10px;
+        -webkit-border-bottom-left-radius: 10px;
 }
 #navbar li:hover {
-	background-color: purple;
+	color: black;
+        background-image: url("/assets/1_white.png");
+	background-size: 100% 100%;
+        background-repeat: no-repeat;
+        /* background-color: white; */
+	text-shadow: -1px 0 grey, 0 1px grey, 1px 0 grey, 0 -1px grey;
+        -moz-border-radius-topleft: 10px;
+        -webkit-border-top-left-radius: 10px;   
+        -moz-border-radius-topright: 10px;
+        -webkit-border-top-right-radius: 10px;  
+        -moz-border-radius-bottomleft: 10px;
+        -webkit-border-bottom-left-radius: 10px;
 }
 #navbar li a {
 	text-decoration: none;
@@ -62,6 +83,8 @@ body {
 	margin: 15px 0 0 0;
 	width: 140px;
 	right: 30px;
+	/* background-image: url("/assets/1_white.png");
+	background-color: white; */
 }
 #navbar ul li {
 	width: 140px;
