--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -15,8 +15,8 @@
   <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logit</li></a>
   <li>Language
     <ul>
-      <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"/> Finnish</li></a>
-      <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"/> English</li></a>
+      <a href="/fi"><li><img class="language" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</li></a>
+      <a href="/en"><li><img class="language" alt="English" src="/assets/flags/en.png"/><br />English</li></a>
     </ul>
   </li>
 </ul>
