Black 1px border aroung flags to improve visibility.

--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -130,6 +130,10 @@ aside img {
 	margin: 7px;
 }
 
+.flag {
+	border: 1px solid black;
+}
+
 /***************************************
  * Specific classes
  ***************************************/
