--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -6,7 +6,7 @@
   <a href="/en/screenshots"><li>Screenshots</li></a>
   <a href="/en/news"><li>News</li></a>
   <a href="/en/download"><li>Download</li></a>
-  <a href="https://github.com/Secretchronicles/TSC"><li>Github</li></a>
+  <a href="https://github.com/Secretchronicles/TSC"><li>GitHub</li></a>
   <a href="https://github.com/Secretchronicles/TSC/issues/"><li>Bugs</li></a>
   <a href="http://forum.secretchronicles.de/forums"><li>Forum</li></a>
   <a href="http://lists.secretchronicles.de/"><li>Mailinglist</li></a>
