--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -6,7 +6,7 @@
   <a href="/fi/screenshots"><li>Kuvat</li></a>
   <a href="/fi/news"><li>Uutiset</li></a>
   <a href="/fi/download"><li>Lataa</li></a>
-  <a href="https://github.com/Secretchronicles/TSC"><li>Github</li></a>
+  <a href="https://github.com/Secretchronicles/TSC"><li>GitHub</li></a>
   <a href="https://github.com/Secretchronicles/TSC/issues/"><li>Bugit</li></a>
   <a href="http://forum.secretchronicles.de/forums"><li>Foorumi</li></a>
   <a href="http://lists.secretchronicles.de/"><li>Postituslista</li></a>
