--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -2,21 +2,21 @@
   <a href="/en"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles of Dr.M." /></a>
 </div>
 <ul id="navbar">
-  <a href="/en"><li>Home</li></a>
-  <a href="/en/screenshots"><li>Screenshots</li></a>
-  <a href="/en/news"><li>News</li></a>
-  <a href="/en/download"><li>Download</li></a>
-  <a href="https://github.com/Secretchronicles/TSC"><li>GitHub</li></a>
-  <a href="https://github.com/Secretchronicles/TSC/issues/"><li>Bugs</li></a>
-  <a href="http://forum.secretchronicles.de/forums"><li>Forum</li></a>
-  <a href="http://lists.secretchronicles.de/"><li>Mailinglist</li></a>
-  <a href="http://wiki.secretchronicles.de/"><li>Wiki</li></a>
-  <a href="/en/documentation"><li>Docs</li></a>
-  <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logs</li></a>
-  <li>Language
+  <li><a href="/en">Home</a></li>
+  <li><a href="/en/screenshots">Screenshots</a></li>
+  <li><a href="/en/news">News</a></li>
+  <li><a href="/en/download">Download</a></li>
+  <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
+  <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
+  <li><a href="http://forum.secretchronicles.de/forums">Forum</a></li>
+  <li><a href="http://lists.secretchronicles.de/">Mailinglist</a></li>
+  <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li><a href="/en/documentation">Docs</a></li>
+  <li><a href="http://chatlogs.secretchronicles.de/">IRC Logs</a></li>
+  <li><a>Language</a>
     <ul>
-      <a href="/fi"><li><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</li></a>
-      <a href="/en"><li><img class="flag" alt="English" src="/assets/flags/en.png"/><br />English</li></a>
+      <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
+      <li><a href="/en"><img class="flag" alt="English" src="/assets/flags/en.png"/><br />English</a></li>
     </ul>
   </li>
 </ul>
