--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -2,21 +2,21 @@
   <a href="/fi"><img class="logo" src="/assets/logo.png" alt="The Secret Chronicles of Dr.M." /></a>
 </div>
 <ul id="navbar">
-  <a href="/fi"><li>Etusivu</li></a>
-  <a href="/fi/screenshots"><li>Kuvat</li></a>
-  <a href="/fi/news"><li>Uutiset</li></a>
-  <a href="/fi/download"><li>Lataa</li></a>
-  <a href="https://github.com/Secretchronicles/TSC"><li>GitHub</li></a>
-  <a href="https://github.com/Secretchronicles/TSC/issues/"><li>Bugit</li></a>
-  <a href="http://forum.secretchronicles.de/forums"><li>Foorumi</li></a>
-  <a href="http://lists.secretchronicles.de/"><li>Postituslista</li></a>
-  <a href="http://wiki.secretchronicles.de/"><li>Wiki</li></a>
-  <a href="/fi/documentation"><li>Dokumentaatio</li></a>
-  <a href="http://chatlogs.secretchronicles.de/"><li>IRC Logit</li></a>
-  <li>Language
+  <li><a href="/fi">Etusivu</a></li>
+  <li><a href="/fi/screenshots">Kuvat</a></li>
+  <li><a href="/fi/news">Uutiset</a></li>
+  <li><a href="/fi/download">Lataa</a></li>
+  <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
+  <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
+  <li><a href="http://forum.secretchronicles.de/forums">Foorumi</a></li>
+  <li><a href="http://lists.secretchronicles.de/">Postituslista</a></li>
+  <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li><a href="/fi/documentation">Dokumentaatio</a></li>
+  <li><a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
+  <li><a>Language</a>
     <ul>
-      <a href="/fi"><li><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</li></a>
-      <a href="/en"><li><img class="flag" alt="English" src="/assets/flags/en.png"/><br />English</li></a>
+      <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
+      <li><a href="/en"><img class="flag" alt="English" src="/assets/flags/en.png"/><br />English</a></li>
     </ul>
   </li>
 </ul>
