--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -13,6 +13,7 @@
   <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
   <li><a href="/en/documentation">Docs</a></li>
   <li><a href="http://chatlogs.secretchronicles.de/">IRC Logs</a></li>
+  <li><a href="/en/donations">Donations</a></li>
   <li><a>Language</a>
     <ul>
       <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
