--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -13,6 +13,7 @@
   <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
   <li><a href="/fi/documentation">Dokumentaatio</a></li>
   <li><a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
+  <li><a href="/fi/donations">Lahjoitukset</a></li>
   <li><a>Language</a>
     <ul>
       <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
