Tidy up communication channels. Closes #23

--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -8,11 +8,9 @@
   <li><a href="/en/download">Download</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
-  <li><a href="http://forum.secretchronicles.de/forums">Forum</a></li>
-  <li><a href="http://lists.secretchronicles.de/">Mailinglist</a></li>
+  <li><a href="/en/community">Community</a></li>
   <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
   <li><a href="/en/documentation">Docs</a></li>
-  <li><a href="http://chatlogs.secretchronicles.de/">IRC Logs</a></li>
   <li><a href="/en/donations">Donations</a></li>
   <li><a>Language</a>
     <ul>
