--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -8,11 +8,9 @@
   <li><a href="/fi/download">Lataa</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
-  <li><a href="http://forum.secretchronicles.de/forums">Foorumi</a></li>
-  <li><a href="http://lists.secretchronicles.de/">Postituslista</a></li>
+  <li><a href="/fi/community">Yhteisö</a></li>
   <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
   <li><a href="/fi/documentation">Dokumentaatio</a></li>
-  <li><a href="http://chatlogs.secretchronicles.de/">IRC Logit</a></li>
   <li><a href="/fi/donations">Lahjoitukset</a></li>
   <li><a>Language</a>
     <ul>
