http to https, .de to .org

--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -9,7 +9,7 @@
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
   <li><a href="/en/community">Community</a></li>
-  <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/en/documentation">Docs</a></li>
   <li><a href="/en/donations">Donations</a></li>
   <li><a>Language</a>
