--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -9,7 +9,7 @@
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
   <li><a href="/fi/community">Yhteisö</a></li>
-  <li><a href="http://wiki.secretchronicles.de/">Wiki</a></li>
+  <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/fi/documentation">Dokumentaatio</a></li>
   <li><a href="/fi/donations">Lahjoitukset</a></li>
   <li><a>Language</a>
