Update our sponsor's logo and link to the HTTPS version of the website.

--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -122,6 +122,11 @@ blockquote {
 	padding-top: 1px;
 	padding-bottom: 1px;
 }
+
+#sponsor img {
+    vertical-align: middle;
+}
+
 aside {
 	float: right;
 	text-align: center;
