--- a/layouts/_foot.erb
+++ b/layouts/_foot.erb
@@ -13,8 +13,8 @@
   })();
   </script>
 
-  <p>Copyright © <%= Time.now.year %> The Secret Chronicles Team<br />
-	Hosting thanks to <a href="http://www.first-root.com"><img src="/assets/first-root.png" alt="First Root" /></a>
+  <p>Copyright © <%= Time.now.year %> The Secret Chronicles Team</p>
+  <p id="sponsor">Hosting thanks to <a href="https://www.first-root.com"><img src="/assets/first-root.png" alt="First Root" /></a></p>
   </p>
 </div>
 
