--- a/content/stylesheets/default.css
+++ b/content/stylesheets/default.css
@@ -193,3 +193,22 @@ aside img {
 }
 
 
+/***************************************
+ * Embedded YouTube video, responsive, adjusts to browser width
+ ***************************************/
+
+.embed-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  max-width: 100%;
+}
+
+.embed-container iframe, .embed-container object, .embed-container embed {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
