Put Notice for Server issues on Site

--- a/content/en/index.md.erb
+++ b/content/en/index.md.erb
@@ -2,7 +2,10 @@
 description: The Secret Chronicles of Dr. M. (TSC) is a two-dimensional sidecrolling platform game with level editor.
 ---
 
+NOTE: Due to server problems, some parts of this site and accompanying services may be unavailable. Thank you for your patience.
+-----------
 <%= render "_screenshots_3_home_en" %>
+
 
 What is it?
 -----------
