Swap sponsor approprietely.

--- a/layouts/_foot.erb
+++ b/layouts/_foot.erb
@@ -14,7 +14,6 @@
   </script>
 
   <p>Copyright © <%= Time.now.year %> The Secret Chronicles Team</p>
-  <p id="sponsor">Hosting thanks to <a href="https://www.first-root.com"><img src="/assets/first-root.png" alt="First Root" /></a></p>
+  <p id="sponsor">Hosting thanks to our collegues from <a href="https://wekan.github.io/"><img src="/assets/wekan-logo.svg" alt="Wekan" style="height: 24px"/></a></p>
   </p>
 </div>
-
