Website menu: - Remove Bugs link and text. - Rename "Community" to "Community and Contributing"

--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -7,8 +7,7 @@
   <li><a href="/fi/news">Uutiset</a></li>
   <li><a href="/fi/download">Lataa</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
-  <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugit</a></li>
-  <li><a href="/fi/community">Yhteisö</a></li>
+  <li><a href="/fi/community">Yhteisö ja osallistuminen</a></li>
   <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/fi/documentation">Dokumentaatio</a></li>
   <li><a href="/fi/donations">Lahjoitukset</a></li>
