--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -7,8 +7,7 @@
   <li><a href="/en/news">News</a></li>
   <li><a href="/en/download">Download</a></li>
   <li><a href="https://github.com/Secretchronicles/TSC">GitHub</a></li>
-  <li><a href="https://github.com/Secretchronicles/TSC/issues/">Bugs</a></li>
-  <li><a href="/en/community">Community</a></li>
+  <li><a href="/en/community">Community and Contributing</a></li>
   <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/en/documentation">Docs</a></li>
   <li><a href="/en/donations">Donations</a></li>
