Add Commercial Support.

--- a/layouts/_head_en.erb
+++ b/layouts/_head_en.erb
@@ -10,7 +10,7 @@
   <li><a href="/en/community">Community and Contributing</a></li>
   <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/en/documentation">Docs</a></li>
-  <li><a href="/en/donations">Donations</a></li>
+  <li><a href="/en/support">Commercial Support</a></li>
   <li><a>Language</a>
     <ul>
       <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
