--- a/layouts/_head_fi.erb
+++ b/layouts/_head_fi.erb
@@ -10,7 +10,7 @@
   <li><a href="/fi/community">Yhteisö ja osallistuminen</a></li>
   <li><a href="https://wiki.secretchronicles.org/">Wiki</a></li>
   <li><a href="/fi/documentation">Dokumentaatio</a></li>
-  <li><a href="/fi/donations">Lahjoitukset</a></li>
+  <li><a href="/fi/support">Kaupallinen tuki</a></li>
   <li><a>Language</a>
     <ul>
       <li><a href="/fi"><img class="flag" alt="Finnish" src="/assets/flags/fi.png"/><br />Finnish</a></li>
